--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,10 +16,10 @@ body * {
     }
 
     .amd-title {
-        background: -webkit-linear-gradient(rgba(201,49,127,1), rgba(249,184,72,1));
+        background: #c9317f;
         -webkit-background-clip: text;
         font-weight: 800;
         -webkit-text-fill-color: transparent;
-    } 
-    
+    }
+
 }
