--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
-<p-card [style]="{'background-color': '#2D2B43','padding': '15px'}">
-    <div class="row">
-      <div class="col-2 logo">
-            <img src="../../../assets/images/amd-logo.png">
-      </div>
-    </div>
-  </p-card>
+<p-menubar [model]="items" [style]="{'background-color': '#2D2B43','padding': '15px'}">
+  <div class="logo text-end" >
+    <a routerLink="/">
+      <img src="assets/images/header-logo.png" alt="logo">
+    </a>
+  </div>
+</p-menubar>
+
